# Fitness-Assistant

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/eval/: off_topic_questions.json  qa_pairs.json
scripts/: debug_hybrid.py  eval_retrieval.py  index_data.py  list_free_models.py  run_evaluation.py  test_fixes.py  test_models.py  test_rag.py  test_search.py
src/: config.py  pipeline.py
src/api/: main.py  schemas.py
src/app/: streamlit_app.py
src/chunking/: chunker.py
src/data_collection/: download_all.py  download_wrkout.py  run_all.py  scrape_wikidata.py  scrape_wikipedia.py
src/data_processing/: unify_exercises.py
src/embedding/: embedder.py  reranker.py
src/evaluation/: evaluator.py  metrics.py  ragas_setup.py  report.py
src/generation/: llm_client.py  prompts.py
src/retrieval/: query_expansion.py  query_filters.py  retriever.py
src/vectorstore/: qdrant_store.py
tests/: test_api.py  test_chunker.py  test_config.py  test_eval_metrics.py  test_prompts.py  test_qdrant_store.py  test_schemas.py
