[project]
name = "fitness-rag"
version = "0.1.0"
description = "RAG-powered fitness exercise Q&A chatbot with hybrid search, cross-encoder reranking, and RAGAS evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=1.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "qdrant-client[fastembed]>=1.18.0",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "uvicorn>=0.49.0",
    "litellm>=1.90.0",
    "google-generativeai>=0.8.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:ragas.*",
]
